[package]
name = "valorant-triggerbot"
version = "1.1.0"
edition = "2021"
build = "build/main.rs"

[dependencies]
screenshots = "0.8.5"
device_query = "1.1.3"
image = "0.24.7"
open = "5.0.0"
eframe = "0.22.0"
inputbot = "0.6"
winapi = { version = "0.3.9", features = ["winuser", "windef"] }

[build-dependencies]
winres = "0.1"