[package]
name = "valorant-triggerbot"
version = "1.3.0"
edition = "2021"
build = "build/main.rs"

[dependencies]
screenshots = "0.8.10"
device_query = "1.1.3"
image = "0.24.9"
winit = "0.29"
eframe = "0.29.1"
inputbot = "0.6"
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
enigo = "0.1"

[build-dependencies]
winres = "0.1"
